# aws-infrastructure

./: .all-contributorsrc  README.md  buildspec-response-app.yml  buildspec.yml  iam.tf  vpc.tf
cloudformatons/: README.md  frontend-s3-pipeline.yml
pipeline/: main.tf
stacker/: Dockerfile  Makefile  pyproject.toml  readme.rst  setup.py  stacker.yaml
stacker/conf/: prod.env
stacker/conf/example_vpc/: README.rst  example.env  stacker.yml
stacker/cross-account/: stacker.yaml  sts-auth.sh
stacker/cross-account/.aws/: config
stacker/stacker_blueprints/: certificate_manager.py  dynamodb.py  ec2.py  ecs.py  elasticsearch.py  iam_roles.py  kinesis.py  network.py  policies.py  route53.py  sns.py  sqs.py  vpc.py
stacker/stacker_blueprints/elasticache/: redis.py
stacker/stacker_blueprints/rds/: base.py
stacker/stacker_blueprints/rds/aurora/: base.py
terraform/: README.md  Readme.md  cluster.tf  default.tfvars  iam.tf  init.sh
terraform/document_db/: cluster-instance.tf  main.tf  terraform.tfvars
terraform/ecs_service/: main.tf  response-app.tfvars  response-ui.tfvars  task-definition.json  temeker.tfvars
terraform/ifra_pipeline/: main.tf
terrafrom/: cluster.tf  default.tfvars  response-app.tfvars
terrafrom/ecs_service/: main.tf  task-definition.json
