[tool.poetry]
name = "ethcrt"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8"
stacker_blueprints = { git = "https://github.com/cloudtools/stacker_blueprints.git" }
troposphere = { git = "https://github.com/cloudtools/troposphere.git" }
stacker = { git = "https://github.com/cloudtools/stacker.git" }


[tool.poetry.dev-dependencies]
nose = "^1.3"
mock = "^2.0"
flake8 = "^3.5"
